# Face_recognition

./: FaceRecognition_PRD.docx  Face_Recognition_Prototype_Documentation.docx  Makefile  README.md  pyproject.toml  requirements.txt  run_test.sh
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
scripts/: demo.py  test_character.py  verify_system.py
src/: __init__.py  config.py
src/alignment/: __init__.py  aligner.py  quality.py
src/api/: app.py  schemas.py
src/api/routes/: detection.py  enrollment.py  health.py  identities.py  recognition.py
src/db/: __init__.py  models.py  repository.py
src/detection/: __init__.py  detector.py  models.py
src/pipeline/: __init__.py  processor.py
src/recognition/: __init__.py  embedder.py  matcher.py
test_samples/: generate_samples.py
test_samples/custom_test/: README.md
test_samples/demo_output/: demo_gallery.pkl
tests/: conftest.py  test_alignment.py  test_api.py  test_config.py  test_detection.py  test_pipeline.py  test_recognition.py
